[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
embedded-graphics = "0.7.1"
oorandom = "11"
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
virtio-input-decoder = "0.1.4"

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []
